# NotesDay

./: .gitignore  CMakeLists.txt  main.cpp
qml/: Chart.qml  CustomCalendar.qml  MainWindow.qml  Metrics.qml  Notes.qml
resources/: resources.qrc
src/: databasemanager.cpp  databasemanager.h  metricTypesModel.cpp  metricTypesModel.h  metricsModel.cpp  metricsModel.h  notesModel.cpp  notesModel.h
